--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -1,3 +1,5 @@
+//= require select2
+
 // SASS variable overrides must be declared before loading up Active Admin's styles.
 //
 // To view the variables that Active Admin provides, take a look at
@@ -15,3 +17,6 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+.hidden {
+  display: none;
+}
