--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the tickets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.ticket-wrapper {
+  p {
+    font-family: monospace;
+  }
+  border: 1px solid #2c3e50;
+  padding: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
