--- a/app/views/tickets/show.pdf.erb
+++ b/app/views/tickets/show.pdf.erb
@@ -13,15 +13,15 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h3 class="page-header">Event: <%= resource.event.title %></h3>
+      <h3 class="page-header">Event: <%= @ticket.event.title %></h3>
 
-      <p><%= "Date: #{resource.event.starts_at.to_s(:short)}" %></p>
+      <p><%= "Date: #{@ticket.event.starts_at.to_s(:short)}" %></p>
 
-      <p><%= "Name: #{resource.name}" %></p>
+      <p><%= "Name: #{@ticket.name}" %></p>
 
-      <p><%= "Email: #{resource.email}" %></p>
+      <p><%= "Email: #{@ticket.email}" %></p>
 
-      <p><%= "Price: #{resource.price}" %></p>
+      <p><%= "Price: #{@ticket.price}" %></p>
     </div>
   </div>
 </div>
